# Totem

./: .gitignore  CLAUDE.md
.claude/agents/: ux-reviewer.md
.claude/skills/endpoint-docs/: SKILL.md
.claude/skills/file-bug-issue/: SKILL.md
deploy/: .env.example  README.md  docker-compose.yml
deploy/db/: schema.sql  seed.dev.sql
deploy/mosquitto/config/: mosquitto.conf  passwd.example
docs/: api-contract.md  architecture.md  crop-profile.md  evaluation-framework.md  gravity-feed.md  index.md  irrigation-module.md  planned-features.md  project-structure.md  requirements.md  schema.md  stack.md
docs/capa1/: overview.md
docs/capa1/tanque-de-suministro/: modulo-flotadores.md  sistema-tanque-suministro.md
docs/capa2/: api-contract.md  db-requirements.md  frontend-redesign.md  migraciones-alembic.md  overview.md  schema.md  stack.md
docs/diagramas/: arquitectura.md
docs/ecosistema/: overview.md  project-structure.md
docs/ecosistema/diagramas/: arquitectura.md
docs/transversal/: crop-profile.md
firmware/: NON-NEGOTIABLES.md
firmware/bootstrap/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults.example
firmware/bootstrap/main/: CMakeLists.txt  bootstrap.c
firmware/components/totem_core/: CMakeLists.txt  totem_config.c  totem_led.c  totem_ota.c  totem_rollback.c  totem_status.c  totem_wifi.c
firmware/components/totem_core/include/: totem_core.h
firmware/components/totem_dht11/: CMakeLists.txt  totem_dht11.c
firmware/genesis/: CMakeLists.txt  README.md  nvs_config.csv.example  sdkconfig.defaults.example
firmware/genesis/main/: CMakeLists.txt  genesis.c
firmware/monitorio/: .gitignore  CMakeLists.txt  README.md  nvs_config.csv.example  partitions.csv  sdkconfig.defaults.example
firmware/monitorio/main/: CMakeLists.txt  monitorio.c
firmware/simulator/: CMakeLists.txt  PROVISIONING.md  partitions.csv  sdkconfig  sdkconfig.defaults.example
firmware/simulator/main/: CMakeLists.txt  Kconfig.projbuild  simulator.c
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AlertsList.jsx  AppShell.jsx  EventsList.jsx  MaintenancePanel.jsx  Navbar.jsx  OverviewChart.jsx  (+10 more)
server/: .env.example  Dockerfile  alembic.ini  auth.py  config.py  db.py  main.py  models.py  mqtt.py  requirements.txt  state.py  telegram.py  ws.py
server/alembic/: env.py
server/routers/: alerts.py  auth.py  commands.py  firmware.py  internal.py  live.py  organizations.py  profiles.py  telegram.py  units.py
server/telegram/: __init__.py  api.py  bot.py  notifications.py
simulator/: .env.example  config.py  main.py  sensors.py  simulator.py
(+62 files in other folders)
